Adicionado reacao a comentario
